# playercount

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: analyse_run.py  download_weights.py  smoke_run.py
src/playercount/: __init__.py  __main__.py  cli.py  config.py  constants.py  schemas.py
src/playercount/aggregation/: __init__.py  frame_counter.py  track_state.py
src/playercount/api/: __init__.py  dependencies.py  main.py  routes.py
src/playercount/detection/: __init__.py  detector.py
src/playercount/io/: __init__.py  sinks.py  video_source.py
src/playercount/models/: __init__.py  registry.py
src/playercount/pipeline/: __init__.py  runner.py  stages.py
src/playercount/team_id/: __init__.py  clusterer.py  embedder.py  team_classifier.py
src/playercount/tracking/: __init__.py  tracker.py
src/playercount/utils/: __init__.py  logging.py  timing.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_api_routes.py  test_config.py  test_frame_counter.py  test_runner.py  test_schemas.py  test_sinks.py  test_team_classifier.py  test_timing.py  test_track_state.py
